SERVER-69429 Check shard key restriction for indexes with `prepareUnique` option

(cherry picked from commit bef1987c88f68d932da97291dd95868b9dd54d2c)